--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,8 @@ header .reversal-logo {
 }
 
 header .menu {
-    padding: 0;
+    margin: 10px 5px;
+    padding: 0px;
     display: grid;
     grid-template-rows: repeat(5, 1fr);
 }
@@ -116,10 +117,29 @@ header nav .menu a:hover {
     align-items: center;
 }
 
+#timetable-sector table td {
+    text-align: center;
+}
+
+#timetable-sector > ul {
+    display : none;
+}
+
 @media (min-width: 600px) {
     
     #timetable-sector table td {
         padding: 10px;
+    }
+}
+
+@media (max-width: 450px) {
+    
+    #timetable-sector table {
+        display: none;
+    }
+    
+    #timetable-sector > ul{
+        display : block;
     }
 }
 
