--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,9 @@ body {
     margin: auto;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-align: center;
     padding-left: 5px;
     padding-right: 5px;
@@ -189,38 +191,46 @@ header nav .menu li:hover {
     flex-direction: column;
 }
 
+#feedback-sector form div {
+    margin: 0px;
+}
+
 #feedback-sector form label {
-    margin: 10px;
+    margin: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+#feedback-sector button {
+    width: 250px;
+    margin: 10px;
 }
 
 #feedback-sector input {
-    width: 200px;
+    width: 300px;
 }
 
 #feedback-sector textarea {
-    width: 260px;
+    width: 300px;
     height: 150px;
 }
 
-.btn,
-.load {
-    cursor: pointer;
-    margin: 10px;
-    border-radius: 5px;
-    text-decoration: none;
-    padding: 10px;
-    font-size: 16px;
-    transition: .3s;
-    -webkit-transition: .3s;
-    -moz-transition: .3s;
-    -o-transition: .3s;
-    display: inline-block;
-    color: black;
-    border: 1px black solid;
-    background-color: white;
+
+@media(min-width: 550px) {
+    #feedback-sector button {
+        width: 400px;
+    }
+
+    #feedback-sector input {
+        width: 500px;
+    }
+
+    #feedback-sector textarea {
+        width: 500px;
+        height: 200px;
+    }
 }
 
 footer {
@@ -290,12 +300,4 @@ footer {
         grid-template-rows: 1fr;
     }
 
-    #feedback-sector input {
-        width: 250px;
-    }
-
-    #feedback-sector textarea {
-        width: 350px;
-        height: 150px;
-    }
 }
